--- a/public/css/mediaqueries.less
+++ b/public/css/mediaqueries.less
@@ -54,11 +54,38 @@
     .slideshowwrapper .slides > img {
         min-height:390px;
     }
+    #trialslideshow .slides > img {
+        min-height:560px;
+    }
+    #trialslideshow .slidetitle,
+    #trialslideshow .slideactions {
+        float:none;
+        width:auto;
+        text-align:center;
+    }
+    #trialslideshow .slidetitle {
+      text-indent: 0;
+      padding-left:0;
+  }
+    #trialslideshow .slideactions {
+        padding-right:0;
+    }
+    .slidemeta {
+        padding-top:2%;
+        padding-bottom:0;
+    }
+    .slideactions {
+        padding-top:2%;
+    }
+    
 }
 
 @media only screen and (max-width: 926px) {
     .slideshowwrapper .slides > img {
-        min-height:420px;
+        min-height:470px;
+    }
+    #trialslideshow .slides > img {
+        min-height:560px;
     }
 }
 
@@ -285,12 +312,6 @@
     }
 }
 
-@media only screen and (max-width: 926px) {
-    .slideshowwrapper .slides > img {
-        min-height:460px;
-    }
-}
-
 @media only screen and (max-width: 620px) {
     .slide {
         font-size:.8em;
@@ -304,6 +325,9 @@
     .slideshowwrapper .slides > img {
         min-height:390px;
     }
+    #trialslideshow .slides > img {
+        min-height:430px;
+    }
     .csfooter div.slider-nav a.right {
         right: 10px;
     }
@@ -315,6 +339,9 @@
 @media only screen and (max-width: 533px) {
     .slideshowwrapper .slides > img {
         min-height:420px;
+    }
+    #trialslideshow .slides > img {
+        min-height:480px;
     }
 }
 
@@ -333,6 +360,9 @@
     }
     .slideshowwrapper .slides > img {
         min-height:360px;
+    }
+    #trialslideshow .slides > img {
+        min-height:530px;
     }
     div.orbit-wrapper div.slider-nav {
         width:100%; margin-left:-50%;
@@ -370,12 +400,24 @@
     .slideshowwrapper .slides > img {
         min-height:460px;
     }
+    #trialslideshow .slides > img {
+        min-height:560px;
+    }
 }
 
 @media only screen and (max-width: 410px) {
     #clients .logos .columns img {
         width:128px;
         margin:0 5px 11px;
+    }
+}
+
+@media only screen and (max-width: 340px) {
+    .slideshowwrapper .slides > img {
+        min-height:500px;
+    }
+    #trialslideshow .slides > img {
+        min-height:600px;
     }
 }
 
