--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -675,7 +675,16 @@ a.reveal {
 		.csheader h2 {
 			font-size:26px;
 			padding-right:50px;
+			text-indent: -1.55em;
+      padding-left:1.55em;
+      line-height:1.3em;
 		}
+			.csheader h2 span {
+			  font-size:1.53846153846154em;
+			  color:#92cdd3;
+			  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    		font-weight:100;
+			}
 	.modalheader .title,
 	.modalcontent h3 {
 		color:#92cdd3;
@@ -757,7 +766,7 @@ a.reveal {
 		border-radius: 6px;
 		padding:.7em 1em .6em;
 		font-size:15px;
-		text-align:left;
+		text-align:center;
 		line-height:1.3;
 	}
 	.csfooter div.slider-nav a { width: 26px; height:0; padding-top: 49px; overflow:hidden; position: absolute; z-index: 430; bottom: 20px; }
