--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1078,8 +1078,8 @@ p.subhead {
   float: left;
   width: 66%;
   text-align: left;
-  text-indent: -1.63em;
-  padding-left: 1.63em;
+  text-indent: -1.5em;
+  padding-left: 1.5em;
   line-height: 1.3em;
 }
 .ie8 #trialslideshow .slidetitle {
@@ -1175,6 +1175,7 @@ p.subhead {
   margin-top: .2em;
 }
 h4.slidetitle span {
+  font-family: "museo-sans-rounded", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.66666666666667em;
   /* 40 / 24 */
 
@@ -1474,14 +1475,14 @@ a.reveal {
 .csheader h2 {
   font-size: 26px;
   padding-right: 50px;
-  text-indent: -1.55em;
-  padding-left: 1.55em;
+  text-indent: -1.4em;
+  padding-left: 1.4em;
   line-height: 1.3em;
 }
 .csheader h2 span {
   font-size: 1.53846153846154em;
   color: #92cdd3;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "museo-sans-rounded", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 100;
 }
 .modalheader .title,
