--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -295,12 +295,13 @@ h1 {
       line-height:1.3em;
   }
   .ie8 #trialslideshow .slidetitle { /* IE8 doesn't like ems apparently */
-      text-indent:-40px;
-      padding-left:40px;
+      text-indent:-36px;
+      padding-left:36px;
   }
   #trialslideshow .slideactions {
       float:right;
       width:32%;
+      padding-right:3%;
   }
 	.slidecount {
 		position:absolute;
@@ -375,9 +376,7 @@ h1 {
 	.slideactions .btn {
 		margin:0 3px 10px;
 	}
-	#trialslideshow .slideactions {
-	    padding-right:4%;
-	}
+	
 .slide h4.slidetitle {
     text-transform:none;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -687,6 +686,10 @@ a.reveal {
       padding-left:1.4em;
       line-height:1.3em;
 		}
+			.ie8 .csheader h2 {
+			  text-indent: -36px;
+      	padding-left:36px;
+			}
 			.csheader h2 span {
 			  font-size:1.53846153846154em;
 			  color:#92cdd3;
