--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1751,6 +1751,21 @@ ul.affiliations li {
     width: 33%;
     padding-left: 5%;
     padding-right: 5%;
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    padding-top: 25px;
+  }
+  .infographic .circle.challenge {
+    background-image: url("../images/bg_circle_challenge_sm.png");
+  }
+  .infographic .circle.solution {
+    background-image: url("../images/bg_circle_solution_sm.png");
+  }
+  .infographic .circle.result {
+    background-image: url("../images/bg_circle_result_sm.png");
+  }
+  .circlecontent h5 {
+    margin-bottom: .5em;
   }
   .infographic .circle.result,
   .infographic .circle.challenge {
@@ -2034,9 +2049,6 @@ ul.affiliations li {
   .infographic .circle h4 {
     margin-bottom: .5em !important;
   }
-  .circlecontent h5 {
-    margin-bottom: .5em;
-  }
   .infographic .circle.challenge:after,
   .infographic .circle.result:before {
     display: none;
@@ -2176,5 +2188,26 @@ ul.affiliations li {
   }
   .no-js .footer .scrolltotop {
     position: absolute;
+  }
+}
+/* @2x images for 768 only */
+@media (min--moz-device-pixel-ratio: 1.3) and (max-width: 768px), (-o-min-device-pixel-ratio: 13/10) and (max-width: 768px), (-webkit-min-device-pixel-ratio: 1.3) and (max-width: 768px), (min-device-pixel-ratio: 1.3) and (max-width: 768px), (min-resolution: 124.8dpi) and (max-width: 768px), (min-resolution: 1.3dppx) and (max-width: 768px) {
+  .infographic .circle.challenge,
+  .infographic .circle.solution,
+  .infographic .circle.result {
+    -moz-background-size: 16px 16px;
+    -ie-background-size: 16px 16px;
+    -o-background-size: 16px 16px;
+    -webkit-background-size: 16px 16px;
+    background-size: 16px 16px;
+  }
+  .infographic .circle.challenge {
+    background-image: url("../images/bg_circle_challenge_sm@2x.png");
+  }
+  .infographic .circle.solution {
+    background-image: url("../images/bg_circle_solution_sm@2x.png");
+  }
+  .infographic .circle.result {
+    background-image: url("../images/bg_circle_result_sm@2x.png");
   }
 }
