--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -3,6 +3,10 @@
 	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); -moz-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 	height: 108px;
 }
+	.masthead .row {
+	    padding-left:0;
+	    padding-right:0;
+	}
 div[role=navigation] a {
 	background: rgb(236, 234, 230);
 	color: rgb(115, 127, 131);
@@ -139,7 +143,7 @@ h1 {
 		webkit-border-radius: 12px;
 		border-radius: 12px;
 		padding:1em;
-		margin-bottom:4em;
+		margin-bottom:2em;
 	}
 	.bubble:after, .bubble:before {
 		top: 100%;
@@ -285,28 +289,15 @@ h1 {
 	}
 	#trialslideshow .slide {
 		background:#f6f7f5;
+		padding-bottom:120px;
 	}
 	#trialslideshow .slidetitle {
-      float:left;
-      width:66%;
-      text-align:left;
-      text-indent: -1.5em;
-      padding-left:1.5em;
       line-height:1.3em;
   }
-  .ie8 #trialslideshow .slidetitle { /* IE8 doesn't like ems apparently */
-      text-indent:-36px;
-      padding-left:36px;
-  }
-  #trialslideshow .slideactions {
-      float:right;
-      width:32%;
-      padding-right:3%;
-  }
+  
 	.slidecount {
 		position:absolute;
 		left:50%;
-		bottom:10px;
 		margin-left:-10%;
 		font-family: "museo-sans-rounded", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		font-weight: 100;
@@ -317,6 +308,9 @@ h1 {
 	}
 		.no-js .slidecount {
 			display:none;
+		}
+		#trialslideshow .slidecount {
+			bottom:85px;
 		}
 		#publications .slidecount {
 			bottom:50px;
@@ -369,9 +363,10 @@ h1 {
 		font-weight: normal;
 		text-transform:uppercase;
 	}
-	.slidemeta {
-		padding-top:5%;
-		padding-bottom:2%;
+	.slideactions {
+		position:absolute;
+		bottom:10px;
+		width:100%;
 	}
 	.slideactions .btn {
 		margin:0 3px 10px;
@@ -381,15 +376,11 @@ h1 {
     text-transform:none;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight:100;
-    font-size:2.4em;
+    font-size:2.8em;
     color:#577384;
     position:relative;
-    margin-top:.2em;
+    margin-bottom:1em;
 }
-	h4.slidetitle span {
-	    font-family: "museo-sans-rounded", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	    font-size:1.66666666666667em; /* 40 / 24 */
-	}
 .infographic,
 .slidemeta {
 	max-width:905px;
@@ -475,6 +466,8 @@ h1 {
 		}
 		.resultbig .circlecontent p {
 			font-size:3.2em;
+			position:relative;
+			margin-top:-.4em;
 		}
 
 #contact {
@@ -682,20 +675,7 @@ a.reveal {
 		.csheader h2 {
 			font-size:26px;
 			padding-right:50px;
-			text-indent: -1.4em;
-      padding-left:1.4em;
-      line-height:1.3em;
 		}
-			.ie8 .csheader h2 {
-			  text-indent: -36px;
-      	padding-left:36px;
-			}
-			.csheader h2 span {
-			  font-size:1.53846153846154em;
-			  color:#92cdd3;
-			  font-family: "museo-sans-rounded", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    		font-weight:100;
-			}
 	.modalheader .title,
 	.modalcontent h3 {
 		color:#92cdd3;
