Adding new photos for Katie, removing Susan, adding Chris Luongo, adding new About Us intro, tweaking About Height to match

--- a/public/css/styles-old-production.css
+++ b/public/css/styles-old-production.css
@@ -2129,7 +2129,9 @@ ul.affiliations li {
   }
   #about {
     z-index: 800;
-    height: 3000px !important;
+    /* height : 3000px !important; */
+  
+    height: 2800px !important;
   }
   #expertise {
     z-index: 700;
