Updating styles with a new backup from production, and adjusting headers above circles so that things don't collide when headers are long

--- a/public/css/mediaqueries.less
+++ b/public/css/mediaqueries.less
@@ -1,4 +1,7 @@
 @media only screen and (max-width: 1024px) {
+    .slide h4.slidetitle {
+        font-size:2em;
+    }
     .footer {
         position: relative;
     }
@@ -77,6 +80,7 @@
 }
 
 @media only screen and (max-width:850px) {
+    
     .masthead {
         height: auto;
     }
@@ -117,6 +121,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .slide h4.slidetitle {
+        font-size:2.8em;
+    }
     .footer p {
         width: 70%;
     }
