--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2115,7 +2115,8 @@ ul.affiliations li {
   }
   #about {
     z-index: 800;
-    height: 3000px !important;
+    /* height : 3000px !important; */
+    height: 2571px !important;
   }
   #expertise {
     z-index: 700;
