Trying to fix Safari footer bug

--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -589,6 +589,7 @@ h1 {
 	background: rgb(84, 112, 128);
 	color: rgb(255, 255, 255);
 	width: 100%;
+	z-index:1;
 }
 	.footer .columns {
 		height: 140px;
