--- a/public/css/mediaqueries.less
+++ b/public/css/mediaqueries.less
@@ -490,7 +490,8 @@
         /* height: 1000px; */
         height:1075px;
         overflow: hidden;
-        top: 88px;
+        /* top: 88px; */
+        top: 108px;
         width: 100%;
     }
         .no-js .wrapper {
