--- a/public/css/mediaqueries.less
+++ b/public/css/mediaqueries.less
@@ -500,12 +500,15 @@
         }
     .section {
         position: absolute;
-        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); -moz-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
         /* height:1280px !important; */
         height: 1075px !important;
         overflow: hidden;
         top: 0;
         width: 100%;
+        
+        &.active {
+            box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); -moz-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+        }
     }
         .no-js .section {
             position:static;
