--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2096,14 +2096,16 @@ ul.affiliations li {
   }
   .section {
     position: absolute;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
     /* height:1280px !important; */
     height: 1075px !important;
     overflow: hidden;
     top: 0;
     width: 100%;
+  }
+  .section.active {
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   }
   .no-js .section {
     position: static;
