Adding in some commented out code allowing us to add a class to the body tag and implement a different About height for review

--- a/public/css/mediaqueries.less
+++ b/public/css/mediaqueries.less
@@ -525,6 +525,9 @@
         z-index: 800;
         height : 3858px !important;
     }
+    /*  .temp #about {
+        height : 3858px !important;
+    }*/
     #expertise {
         z-index: 700;
         height: 1416px !important;
