--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2121,6 +2121,9 @@ ul.affiliations li {
     z-index: 800;
     height: 3858px !important;
   }
+  /*  .temp #about {
+        height : 3858px !important;
+    }*/
   #expertise {
     z-index: 700;
     height: 1416px !important;
